# Binary-Independence-Model

./: BIM.py  pyproject.toml  test.py
result/: processed.csv  result.csv
src/: data.xlsx
